2003-01-22  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-reports/business-reports.scm -- need to
	  load business-gnome module, which loads gnome-utils module, for
	  a couple HTML definitions (which should eventually be moved
	  elsewhere so that the reports themselves don't depend on
	  gnome...  This fixes Wilddev's report problem.

	* src/business/business-ledger/gncEntryLedgerModel.c -- relabel
	  the "Account" column to "Income Account" or "Expense Account"
	  to better encourage the user to "choose wisely".
	
2003-01-21  David Hampton  <hampton@employees.org>

	* src/quotes/finance-quote-helper.in: Fix problem getting quotes
	from trustnet.
	
2003-01-21  Derek Atkins  <derek@ihtfp.com>

	* configure.in: be more liberal in the use of AS_SCRUB_INCLUDE

2003-01-20  Chris Lyttle  <chris@wilddev.net>

	* configure.in: release 1.7.8
	* NEWS: release 1.7.8

2003-01-20  John Pierce <john@killterm.org>

	* Makefile.am
	  Added distributed generated files to distcleancheckfiles.
          Added distcheck-hook to deal with automake1.5 stupidity.

	* src/doc/Makefile.am
	  Move doxygen log and cache to distclean-local.

2003-01-20  Derek Atkins  <derek@ihtfp.com>

	* src/engine/QueryNew.c -- g_list_append() can take a LONG time
	  and on big queries the merge can appear to take a long time.
	  So, let's use g_list_prepend() and g_list_reverse() to speed
	  up the process significantly.

	* src/engine/gnc-numeric. -- fix the gnc_numeric_lcd() algo to
	  actually work with numbers that are not co-divisible but have
	  multiple-powers of co-factors.  For example, the old algorithm
	  thought the LCM of 100,96875 was 3100, when it is really 387500,
	  because it was removing the factor of '5' too many times..

	* src/app-utils/test/test-scm-query-string.c -- fix a memory leak
	  in the test.
	
2003-01-19  John Pierce <john@killterm.org>

	* doc/Makefile.am
	* src/doc/Makefile.am
	* src/doc/design/Makefile.am
	* src/experimental/cgi-bin/Makefile.am